--- a/frontend/src/styles/global.css
+++ b/frontend/src/styles/global.css
@@ -69,6 +69,19 @@ html {
     min-width: 0 !important;
     width: 100vw;
   }
+  /* Hide scrollbars on mobile for a cleaner view */
+  body,
+  html,
+  .scrollable-container {
+    -ms-overflow-style: none; /* IE and Edge */
+    scrollbar-width: none; /* Firefox */
+    overflow-y: auto;
+  }
+  body::-webkit-scrollbar,
+  html::-webkit-scrollbar,
+  .scrollable-container::-webkit-scrollbar {
+    display: none;
+  }
 }
 
 /* estilo scrollbar */
@@ -102,7 +115,7 @@ header {
   top: 0;
   z-index: 100;
   background-color: var(--color-light);
-  height: var(--header-height);
+  /* height: var(--header-height); */
 }
 
 /* Contenedor con padding superior que tiene en cuenta el header */
@@ -198,7 +211,9 @@ select:focus {
   border-radius: var(--input-border-radius);
   font-size: var(--input-font-size);
   font-family: "Poppins", sans-serif;
-  transition: border-color 0.3s ease, box-shadow 0.3s ease;
+  transition:
+    border-color 0.3s ease,
+    box-shadow 0.3s ease;
 }
 
 .form-input:focus {
@@ -356,6 +371,7 @@ a:hover {
   header {
     position: fixed;
     width: 100%;
+    height: auto;
   }
 
   body {
